--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "11.0.1",
     "phosphor-react": "^1.2.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "vanilla-tilt": "^1.7.0"
   },
   "devDependencies": {
     "@types/node": "^15.14.0",
